# grocery-restapi

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker-publish.yml
