[project]
name = "grocery-restapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matt Koski",email = "maccam912@gmail.com"},
]
dependencies = [
    "litestar>=2.7.1",
    "pydantic>=2.6.4",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "pre-commit>=3.7.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"

[tool.pdm.scripts]
app = "uvicorn app:app --reload --host 0.0.0.0 --port 8080"
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.5",
]
